# 2im

./: .gitignore  .gitmodules  BUILD  CONTRIBUTING.md  LICENSE  README.md  WORKSPACE  cjkbytes.js  range.js
.github/workflows/: build_test_update.yml  c_bazel.yml  c_cmake.yml  java_bazel.yml  js_bazel.yml  update_node_wasm.yml  wasm_cmake.yml
assets/: index.html
c/: BUILD  CMakeLists.txt  WORKSPACE  codec_params.cc  codec_params.h  codec_params_test.cc  crc64.h  crc64_test.cc  decoder.cc  decoder.h  distance_range.cc  distance_range.h  encoder.cc  encoder.h  encoder_internal.h  encoder_simd.cc  encoder_simd.h  encoder_test.cc  encoder_wasm.cc  fuzz_decoder.cc  image.cc  image.h  io.cc  io.h  main.cc  platform.c  platform.cc  platform.h  range_code.h  range_decoder.cc  range_decoder.h  range_encoder.cc  range_encoder.h  range_test.cc  region.cc  region.h  region_test.cc  simple_alloc.cc  sin_cos.cc  sin_cos.h  (+11 more)
docs/: app.html  index.html  simd-twim.wasm  twim-vs-sqip.html  twim.js  twim.wasm
docs/sqip/: aaron-burden-unsplash.2im  anthony-esau-unsplash.2im  aron-visuals-unsplash.2im  beach.2im  charles-unsplash.2im  eric-marty-unsplash.2im  ian-dooley-unsplash.2im  meric-dagli-unsplash.2im  mona-lisa.2im  quino-al-unsplash.2im  shane-young-unsplash.2im
java/: .bazelrc  WORKSPACE  build.xml
java/ru/eustas/twim/: BUILD  CjkBytes.java  CjkBytesTest.java  CjkDecoder.java  CjkEncoder.java  CjkTest.java  CjkTransform.java  CodecParams.java  Crc64.java  Crc64Test.java  Decoder.java  DecoderMain.java  DecoderTest.java  DistanceRange.java  Encoder.java  EncoderCore.java  EncoderMain.java  EncoderSimdCore.java  EncoderTest.java  EncoderVanillaCore.java  Main.java  MovieMain.java  Range.java  RangeCode.java  RangeDecoder.java  RangeEncoder.java  RangeOptimalEncoder.java  RangeTest.java  Region.java  RegionTest.java  SinCos.java  SinCosTest.java  Utf8.java  Utf8Test.java  UtfDecoder.java  UtfEncoder.java  UtfTest.java  XRangeCode.java  XRangeDecoder.java  XRangeEncoder.java  (+1 more)
js/: BUILD  CjkDecoder.js  CjkEncoder.js  CjkRanges.js  CjkTransform.js  Cjk_test.js  CodecParams.js  Crc64.js  Crc64_test.js  Decoder.js  DistanceRange.js  Mini.js  RangeDecoder.js  RangeEncoder.js  RangeOptimalEncoder.js  Range_test.js  Region.js  Region_test.js  SinCos.js  SinCos_test.js  WORKSPACE  XRangeDecoder.js  XRange_test.js  app.html  cjkbytes.js  cjkbytes_test.js  main.js  range.js  range_test.js  twim-lib.js  twim-module.js
node/: binding.gyp  test.js  twim.cc
node/twim-decode/: index.js  package.json
node/twim-decode/src/: test.js
node/twim-encode/: index.js  package.json  simd-twim.wasm  twim.wasm
node/twim-encode/src/: index.js  test.js
